<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_quick_start"
        android:icon="@drawable/ic_quick"
        android:title="@string/quick_start" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_exercise"
        android:title="@string/my_exercises" />

    <item
        android:id="@+id/navigation_save"
        android:icon="@drawable/ic_plus"
        android:title="@string/save_exercise" />

    <item
        android:id="@+id/navigation_about_tut"
        android:icon="@drawable/ic_about"
        android:title="@string/about_time_under_tension" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />

</menu>
