<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <NumberPicker
        android:id="@+id/numPick1"
        android:layout_width="134dp"
        android:layout_height="232dp"
        android:layout_marginBottom="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <NumberPicker
        android:id="@+id/numPick2"
        android:layout_width="131dp"
        android:layout_height="232dp"
        android:layout_marginBottom="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="281dp"
        android:layout_height="59dp"
        android:layout_marginBottom="68dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Switch
        android:id="@+id/toggleSound"
        android:layout_width="273dp"
        android:layout_height="100dp"
        android:layout_marginBottom="244dp"
        android:switchMinWidth="70dp"
        android:text="@string/sound"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Switch
        android:id="@+id/toggleVibration"
        android:layout_width="273dp"
        android:layout_height="100dp"
        android:layout_marginBottom="144dp"
        android:text="@string/vibration"
        android:textSize="24sp"
        android:switchMinWidth="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginBottom="580dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/quick_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:padding="20dp" />

</android.support.constraint.ConstraintLayout>